[gd_scene load_steps=8 format=3 uid="uid://b362dxgf8xwdb"]

[ext_resource type="Script" path="res://scripts/controllers/sound_manager.gd" id="1_ehfbi"]
[ext_resource type="AudioStream" uid="uid://csqr5ndtqic8d" path="res://assets/sounds/sfx/skadePiano.ogg" id="2_8pwwn"]
[ext_resource type="AudioStream" uid="uid://dvol0x04k4mt4" path="res://assets/sounds/music/Vind + fuglekvitter 2.ogg" id="2_n6e1t"]
[ext_resource type="AudioStream" uid="uid://bw7yeednaredn" path="res://assets/sounds/sfx/SkiltDemp.ogg" id="3_o1vs7"]
[ext_resource type="AudioStream" uid="uid://ds373xo8ajov0" path="res://assets/sounds/sfx/FallFail.ogg" id="4_oheip"]
[ext_resource type="AudioStream" uid="uid://c2muqsj37tjgh" path="res://assets/sounds/sfx/VinnBane.ogg" id="5_lmylb"]
[ext_resource type="AudioStream" uid="uid://cl1ys306tqgvj" path="res://assets/sounds/sfx/SkadeLydTromme.ogg" id="6_tw4nt"]

[node name="SoundManager" type="Node"]
process_mode = 3
script = ExtResource("1_ehfbi")

[node name="BackgroundMusic" type="Node" parent="."]

[node name="MenuTrack" type="AudioStreamPlayer" parent="BackgroundMusic"]
bus = &"music"

[node name="BirdChirp" type="AudioStreamPlayer" parent="BackgroundMusic"]
stream = ExtResource("2_n6e1t")
bus = &"music"

[node name="SoundEffects" type="Node" parent="."]

[node name="SkadePiano" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("2_8pwwn")
bus = &"sfx"

[node name="SkiltDemp" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("3_o1vs7")
bus = &"sfx"

[node name="FallFail" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("4_oheip")
bus = &"sfx"

[node name="VinnBane" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("5_lmylb")
bus = &"sfx"

[node name="SkadeLydTromme" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("6_tw4nt")
bus = &"sfx"
